<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    android:paddingVertical="48dp"
    android:orientation="vertical"
    tools:ignore="HardcodedText"
    tools:context=".Activities.GettingStarted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Logo Hitorigoto"
            android:src="@drawable/ic_hitorigoto" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextLogo.HeadlineSmall"
            android:layout_marginStart="16dp"
            android:text="@string/app_name" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Image Asset for Getting Started"
            android:src="@drawable/img_gettingstarted" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_getting_started"
            android:textAppearance="@style/TextAppearance.Hitorigoto.BodyLarge"
            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            style="Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/btn_getting_started"
            android:onClick="goToSignUp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:text="@string/btn_have_account"
            android:onClick="goToSignIn"/>
    </LinearLayout>



</LinearLayout>