<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/hero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_tertiaryContainer"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingVertical="48dp">

            <TextView
                android:id="@+id/tv_hero_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_hero_home"
                android:textAppearance="@style/TextAppearance.Hitorigoto.HeadlineLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_hero_home"
                android:textAppearance="@style/TextAppearance.Hitorigoto.BodyLarge" />

        </LinearLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:liftOnScroll="true">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="?attr/actionBarSize"
                    app:navigationIcon="@drawable/ic_menu">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="24dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/course_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingHorizontal="12dp"
                            android:textAppearance="@style/TextAppearance.Hitorigoto.TitleMedium"
                            android:text="@string/course_level"/>
                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"/>

                        <Button
                            android:id="@+id/btn_level_test"
                            style="@style/Widget.Material3.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:backgroundTint="@color/md_theme_light_secondaryContainer"
                            app:icon="@drawable/ic_test"
                            app:iconSize="24dp"
                            app:iconTint="@color/md_theme_light_onSecondaryContainer"
                            android:textColor="@color/md_theme_light_onSecondaryContainer"
                            android:text="@string/menu_level_test" />

                    </LinearLayout>
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lesson"
                android:layout_marginTop="64dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
</FrameLayout>